<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/byblosLogo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/loginTitle"
                android:textAlignment="center"
                android:textColor="#2556A1"
                android:textSize="36sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginHorizontal="20dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/loginNameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:layout_marginTop="10dp"
                android:autofillHints="username"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/loginNameField"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/loginNameTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:gravity="center"
                android:labelFor="@id/loginNameField"
                android:text="@string/loginNameTitle"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginPassField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="password"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/loginPassName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:gravity="center"
                android:labelFor="@id/loginPassField"
                android:paddingBottom="20dp"
                android:text="@string/loginPassName"
                android:textSize="16sp" />


            <Button
                android:id="@+id/loginLogin"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#2556A1"
                android:onClick="validateLogin"
                android:text="@string/loginLogin"
                android:textColor="@color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/loginRegister"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="switchToRegisterBranch"
                android:text="@string/loginRegisterBranch" />

            <Button
                android:id="@+id/loginClient"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="switchToRegisterUser"
                android:text="@string/loginRegisterCustomer" />

<!--            <Button-->
<!--                android:id="@+id/testButtonDoNotKeep"-->
<!--                style="?android:attr/buttonBarButtonStyle"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:onClick="testFunctionDoNotKeep"-->
<!--                android:text="click here to test"-->
<!--                android:textColor="@color/teal_200" />-->

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>