<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminServiceAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/addServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_service"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/addServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/add_service_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/serviceFieldsLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/serviceName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/serviceNameTitle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/serviceNameTitle" />

                    <EditText
                        android:id="@+id/serviceNameField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/serviceCost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/serviceCostTitle"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/serviceCostTitle" />

                    <EditText
                        android:id="@+id/serviceCostField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="" />

                </LinearLayout>

                <View
                    android:id="@+id/divider_fields"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/fieldsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/fieldsTitle"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/addField"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:text="@string/add_field_button" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>