<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/registerCustomerTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:text="@string/register_customer_account"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginVertical="10dp"/>


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginHorizontal="20dp"
                android:background="?android:attr/listDivider" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/registerCustomerUsernameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"

                android:autofillHints="username"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerUsernameText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/registerCustomerUsernameField"
                android:text="@string/loginNameTitle"
                android:textAlignment="center"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/registerCustomerPasswordField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerPasswordTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/registerCustomerPasswordField"
                android:text="@string/loginPassName"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerCustomerEmailField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"

                android:autofillHints="username"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerEmailTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/registerCustomerEmailField"
                android:text="@string/e_mail"
                android:textAlignment="center"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"

                android:autofillHints="username"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/firstNameTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/firstNameField"
                android:text="@string/first_name"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"

                android:autofillHints="username"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/lastNameTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/lastNameField"
                android:text="@string/last_name"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dateOfBirthField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/dateOfBirthTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/dateOfBirthField"
                android:text="@string/date_of_birth"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/dateOfBirthSubTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@+id/dateOfBirthField"
                android:text="@string/yyyy_mm_dd"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <TextView
                android:id="@+id/registerBranchAddressTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:layout_marginBottom="20sp"
                android:labelFor="@+id/registerBranchAddressField"
                android:text="@string/address"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/registerCustomerAddressLine1Field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerAddressLine1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressLine1Field"
                android:text="@string/address_line_1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerCustomerAddressLine2Field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerAddressLine2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressLine2Field"
                android:text="@string/address_line_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerCustomerAddressCityField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerAddressCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressCityField"
                android:text="@string/address_city"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerCustomerAddressProvinceField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerAddressProvince"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressProvinceField"
                android:text="@string/address_province"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/provinceSubTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressProvinceField"
                android:text="@string/province_format"
                android:textAlignment="center"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/registerCustomerAddressCountryField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerAddressCountry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressCountryField"
                android:text="@string/address_country"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/registerCustomerAddressPostalCodeField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerCustomerAddressPostalCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressPostalCodeField"
                android:text="@string/address_postal_code"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/postalCodeSubTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="80dp"
                android:labelFor="@id/registerCustomerAddressPostalCodeField"
                android:text="@string/a1b2c3_12345"
                android:textAlignment="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/registerCustomerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20pt"
                android:text="@string/register_account"
                android:onClick="handleCustomerRegistration"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>